log ID temporary fix, problems would occur when it comes to deleting log items (primary key failure) Volume and 1rm added to layout, just need to calculate them correctly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="finish">FINISH</string>
     <string name="exercise_name">Exercise name</string>
     <string name="name">Name</string>
+    <string name="volume">Volume</string>
+    <string name="_1rm">1RM</string>
+    <string name="est_1rm">Est. 1RM:</string>
+    <string name="hint_volume">Volume:</string>
 
     <string-array name="muscles">
         <item>Abs</item>
