--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="est_1rm">Est. 1RM:</string>
     <string name="hint_volume">Volume:</string>
     <string name="statistics">Statistics</string>
+    <string name="bodyweight">Bodyweight</string>
 
     <string-array name="muscles">
         <item>Abs</item>
