--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="muscles_targeted">Muscles targeted</string>
     <string name="previous_attempts">Previous Attempts</string>
     <string name="add_set">Add Set</string>
+    <string name="routines">Routines</string>
 
     <string-array name="muscles">
         <item>Abs</item>
