--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,8 @@
     <string name="previous_attempts">Previous Attempts</string>
     <string name="add_set">Add Set</string>
     <string name="routines">Routines</string>
+    <string name="routine_title">Routine title</string>
+    <string name="start">START</string>
 
     <string-array name="muscles">
         <item>Abs</item>
