--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,8 +38,21 @@
     <string name="routines">Routines</string>
     <string name="routine_title">Routine title</string>
     <string name="start">START</string>
+    <string name="new_exercise">New Exercise</string>
+    <string name="filter">Filter</string>
 
     <string-array name="muscles">
+        <item>Abs</item>
+        <item>Back</item>
+        <item>Biceps</item>
+        <item>Chest</item>
+        <item>Legs</item>
+        <item>Shoulders</item>
+        <item>Triceps</item>
+    </string-array>
+
+    <string-array name="musclesMain">
+        <item>All</item>
         <item>Abs</item>
         <item>Back</item>
         <item>Biceps</item>
